adicionando frase no cabecalho e adicionando sessao sobre

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/header/perfil.css">
+  <link rel="stylesheet" href="assets/css/main/sobre__sessao.css">
   <link rel="stylesheet" href="assets/css/main/hobbies__sessao.css">
   <link rel="stylesheet" href="assets/css/main/skills__sessao.css">
   <link rel="stylesheet" href="assets/css/main/formacao__sessao.css">
@@ -44,32 +45,38 @@
     </header>
 
     <main class="bg-light b-radius-5">
+      <section class="sobre__sessao">
+        <h2>Sobre min</h2>
+        <p class="sobre__sessao__mim">
+          Óla, seja bem-vindo! ao meu portifolio sou Ygor Guilherme amante da aréa de TI, sou fascinado em estudar eletronica e programação, procuro sempre entender um pouco de tudo, ampliar os meus conhecimentos. Adoro um bom desafio para resolve e coisas que me fazem pensa fora da caixa.
+        </p>
+      </section>
 
       <section class="hobbies__sessao">
         <h2>Hobbies</h2>
 
-        <div class="hobbies__meu">
+        <div class="hobbies">
 
-          <div class="hobbies__meu__card leitura">
-            <div class="icon hobbies__icon ">
+          <div class="hobbies__card leitura">
+            <div class="hobbies__card__icon icon">
               <img src="assets/img/icon/leitura.png" alt="" height="64">
             </div>
-            <p>Ler é algo que me faz criativo, adoro ler bons manga.</p>
+            <p class="hobbies__card__text">Ler é algo que me faz criativo, adoro ler bons manga.</p>
           </div>
 
-          <div class="hobbies__meu__card cozinha">
-            <div class="icon hobbies__icon ">
+          <div class="hobbies__card cozinha">
+            <div class="hobbies__card__icon icon">
               <img src="assets/img/icon/cozinha.png" alt="" height="64">
             </div>
 
-            <p>Gosto de mistura ingredientes e ver algo surgindo.</p>
+            <p class="hobbies__card__text">Gosto de mistura ingredientes e ver algo surgindo.</p>
           </div>
 
-          <div class="hobbies__meu__card filme">
-            <div class="icon hobbies__icon ">
+          <div class="hobbies__card filme">
+            <div class="hobbies__card__icon icon">
               <img src="assets/img/icon/filme.png" alt="" height="64">
             </div>
-            <p>Adoro assistir filmes e series. Principalmente de ficção cientifica.</p>
+            <p class="hobbies__card__text">Adoro assistir filmes e series. Principalmente de ficção cientifica.</p>
           </div> 
         </div>
       </section>
