implementando menu mobile

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 			</div>
 
 			<nav>
+				<input type="checkbox" id="btn-menu">
+				<label class="nav__botao__menu" for="btn-menu">MENU</label>
+
 				<ul>
 					<li><a href="assets/cv/curriculo.pdf" target="_blank">Download CV</a></li>
 					<li><a href="#projetos">Projetos</a></li>
