--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 	<div class="box">
 		<header>
 			<div class="cabecalho">
-				<div class="perfil">
-					<img src="assets/img/perfil/perfil.jpg" alt="imagem do perfil" id="perfil__img">
-				</div>
+
+				<img src="assets/img/perfil/perfil.jpg" alt="imagem do perfil" id="perfil__img">
+
 
 				<div class="perfil__mensagem" >
 					<h3 id="citacao"></h3>
@@ -138,7 +138,7 @@
 
 								<div class="skills__card mysql">
 									<div class="skills__card__icon icon">
-										<img src="assets/img/icon/mysql-svgrepo.svg" alt="" height="64">
+										<img src="assets/img/icon/mysql-icon.svg" alt="" height="64">
 									</div>
 								</div>
 
@@ -149,7 +149,10 @@
 			</section>
 
 			<section class="formacao__sessao" id="formacao">
-				<h2 class="titulo__sessao">Formação | Curso</h2>
+				<div class="formacao__titulo">
+					<h2 class="titulo__sessao">Formação</h2>
+				</div>
+
 				<div class="formacao">
 					<div class="formacao__curso">
 						<h4>Manutenção de Micro Computadores</h4>
@@ -188,7 +191,7 @@
 					</div>
 
 					<div class="formacao__curso">
-						<h4>Desenvolvimento Web Com Python e Django</h4>
+						<h4>Python e Django para web</h4>
 						<div class="formacao__curso-escola">
 							<img src="assets/img/icon/school.png" alt="" height="22">
 							<span>Udemy</span>
@@ -205,110 +208,174 @@
 						</div>
 					</div>
 
+					<div class="formacao__curso">
+						<h4>Desenvolvimento web</h4>
+						<div class="formacao__curso-escola">
+							<img src="assets/img/icon/school.png" alt="" height="22">
+							<span>Alura</span>
+						</div>
+
+						<div class="formacao__curso-date">
+							<img src="assets/img/icon/calendar.svg" alt="" height="22">
+							<span>Cursando</span>
+						</div>
+
+						<div class="formacao__curso-descricao">
+							<img src="assets/img/icon/gear.svg" height="22">
+							<span>Aprendendo tecnologia para web como HTML5, CSS3, Javascript e metodologia agil.</span>
+						</div>
+					</div>
 				</div>
 			</section>
 
 			<section class="projeto__sessao" id="projetos">
-				<h2 class="titulo__sessao">Projetos</h2>
+				<div class="projeto__titulo">
+					<h2 class="titulo__sessao">Projetos</h2>
+				</div>
+
 				<div class="projeto__container">
 
 					<div class="projeto__card__container">
-						<img class="projeto__card__imagem" src="assets/img/projeto/projeto-criptdex.png" alt="" >
+						<div class="projeto__card__box">
+							<img class="projeto__card__imagem" src="assets/img/projeto/projeto-criptdex.png" alt="" >
 
-						<div class="projeto__card__corpo">
-							<h4 class="projeto__card__titulo">
-								TITULO
-							</h4>
-							<p class="projeto__card__descricao">
-								DESCRIÇÃO
-							</p>
+							<div class="projeto__card__corpo">
+								<h4 class="projeto__card__titulo">
+									Criptdex - Decodificador
+								</h4>
+								<p class="projeto__card__descricao">
+									Codificado de texto utilizando um algoritimo proposto pela <strong>Alura</strong>.
+								</p>
+							</div>
+						</div>
+
+						<div class="projeto__card__tags">
+							<ul>
+								<li class="projeto__card__tags__list projeto__card__tags--html">html</li>
+								<li class="projeto__card__tags__list projeto__card__tags--css">css</li>
+								<li class="projeto__card__tags__list projeto__card__tags--javascript">javascript</li>
+							</ul>
+							
+							<div class="projeto__card__tags__codigo">
+								<a class="projeto__card__mais" target="_blank" href="https://github.com/ygorfsguilherme/api-pyformail#o-que-pyformail"><img src="assets/img/icon/gamepad.svg" alt=""></a>
+
+								<a class="projeto__card__mais" target="_blank" href="https://github.com/ygorfsguilherme/api-pyformail#o-que-pyformail"><img src="assets/img/icon/coding.svg" alt=""></a>	
+							</div>
 						</div>
 					</div>
 
 					<div class="projeto__card__container">
-						<img class="projeto__card__imagem" src="assets/img/projeto/projeto-criptdex.png" alt="" >
+						<div class="projeto__card__box">
+							<img class="projeto__card__imagem" src="assets/img/projeto/projeto-jogo-da-forca.png" alt="" >
 
-						<div class="projeto__card__corpo">
-							<h4 class="projeto__card__titulo">
-								TITULO
-							</h4>
-							<p class="projeto__card__descricao">
-								DESCRIÇÃO
-							</p>
+							<div class="projeto__card__corpo">
+								<h4 class="projeto__card__titulo">
+									Jogo da forca
+								</h4>
+								<p class="projeto__card__descricao">
+									Jogo desenvolvido no projeto ONE - Oracle Next Education e Alura
+								</p>
+							</div>
+						</div>
+
+						<div class="projeto__card__tags">
+							<ul>
+								<li class="projeto__card__tags__list projeto__card__tags--html">html</li>
+								<li class="projeto__card__tags__list projeto__card__tags--css">css</li>
+								<li class="projeto__card__tags__list projeto__card__tags--javascript">javascript</li>
+							</ul>
+
+							<div class="projeto__card__tags__codigo">
+								<a class="projeto__card__mais" target="_blank" href="https://github.com/ygorfsguilherme/api-pyformail#o-que-pyformail"><img src="assets/img/icon/gamepad.svg" alt=""></a>
+
+								<a class="projeto__card__mais" target="_blank" href="https://github.com/ygorfsguilherme/api-pyformail#o-que-pyformail"><img src="assets/img/icon/coding.svg" alt=""></a>	
+							</div>
 						</div>
 					</div>
 
 					<div class="projeto__card__container">
-						<img class="projeto__card__imagem" src="assets/img/projeto/projeto-criptdex.png" alt="" >
+						<div class="projeto__card__box">
+							<img class="projeto__card__imagem" src="assets/img/projeto/projeto-pyformail.png" alt="" >
 
-						<div class="projeto__card__corpo">
-							<h4 class="projeto__card__titulo">
-								TITULO
-							</h4>
-							<p class="projeto__card__descricao">
-								DESCRIÇÃO
-							</p>
+							<div class="projeto__card__corpo">
+								<h4 class="projeto__card__titulo">
+									Pyformail
+								</h4>
+								<p class="projeto__card__descricao">
+									api de envio de formulario para o email utilizando python e flask.
+								</p>
+							</div>
+						</div>
+
+						<div class="projeto__card__tags">
+							<ul>
+								<li class="projeto__card__tags__list projeto__card__tags--html">html</li>
+								<li class="projeto__card__tags__list projeto__card__tags--python">python</li>
+							</ul>
+
+							<a class="projeto__card__mais" target="_blank" href="https://github.com/ygorfsguilherme/api-pyformail#o-que-pyformail"><img src="assets/img/icon/coding.svg" alt=""></a>
 						</div>
 					</div>
 
-				</div>
-			</section>
-		</main>
+				</section>
+			</main>
 
-		<footer>
+			<footer>
 
-			<h3 id="contato">Gostaria de saber mais, entre em contato.</h3>
+				<h3 id="contato">Gostaria de saber mais, entre em contato.</h3>
 
-			<form class="form__contato" action="" method="post">
-				<div class="form__contato-nome-sobrenome">
-					<div class="form__contato__nome">
-						<input type="text" id="cantato__nome" placeholder="Nome"/>
+				<form class="form__contato" action="https://api-pyformail.herokuapp.com/form?mail=ygorfsguilherme@gmail.com" method="post">
+					<div class="form__contato__nomeSobrenome">
+						<div class="form__contato__nome">
+							<input name="nome" type="text" placeholder="Nome"/>
+						</div>
+
+						<div class="form__contato__sobrenome">
+							<input name="sobrenome" type="text" placeholder="Sobrenome" />
+						</div>
 					</div>
 
-					<div class="form__contato__sobrenome">
-						<input type="text" id="contato__sobrenome" placeholder="Sobrenome" />
+					<div class="form__contato--email">
+						<input name="email" type="email" placeholder="E-mail" />
+					</div>
+
+					<div class="form__contato--assunto">
+						<input name="assunto" type="text" placeholder="Assunto" />
+					</div>
+
+					<div class="form__contato--mensagem">
+						<textarea name="mensagem" id="form__mensagem" placeholder="Digite sua mensagem aqui"></textarea>
+					</div>
+
+					<button class="form_contato_botao" type="submit">Enviar</button>
+				</form>
+
+				<div class="social">
+					<div class="github">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+							<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+						</svg>
+					</div>
+
+					<div class="linkedin">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+							<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+						</svg>
+					</div>
+
+					<div class="telegram">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
+							<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"/>
+						</svg>
 					</div>
 				</div>
 
-				<div class="form__contato-email">
-					<input type="email" id="form__email" placeholder="E-mail" />
+				<div class="copyright">
+					<div>&copy; Copyright - 2022</div>
+					<div>Desenvolvido por: <strong>Ygor Guilherme</strong></div>
 				</div>
 
-				<div class="form__contato-mensagem">
-					<textarea id="form__mensagem" placeholder="Digite sua mensagem aqui"></textarea>
-				</div>
-
-				<button class="form_contato_botao" type="submit">Enviar</button>
-			</form>
-
-			<div class="social">
-				<div class="github">
-					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-						<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-					</svg>
-				</div>
-
-				<div class="linkedin">
-					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-						<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-					</svg>
-				</div>
-
-				<div class="telegram">
-					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
-						<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"/>
-					</svg>
-				</div>
-			</div>
-
-			<div class="copyright">
-				<div>&copy; Copyright - 2022</div>
-				<div>Desenvolvido por: <strong>Ygor Guilherme</strong></div>
-			</div>
-
-
-
-		</footer>
-	</div>
-</body>
-</html>
+			</footer>
+		</div>
+	</body>
+	</html>
