atualizando imagem do projeto criptdex

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<p class="sobre__sessao__mim">
 						Seja bem-vindo!
 						Sou <strong>Ygor Guilherme</strong>, entusiasta e estudante de desenvolvimento
-						web (fullstack). Amante da aréa de TI, sou fascinado em estudar eletronica e programação, procuro sempre entender um pouco de tudo e ampliar os meus conhecimentos, adoro um bom desafio.
+						web {fullstack}. Amante da aréa de TI, sou fascinado em estudar eletronica e programação, procuro sempre entender um pouco de tudo e ampliar os meus conhecimentos, adoro um bom desafio.
 					</p>
 				</div>
 
