modificando o card da sessao projeto

--- a/index.html
+++ b/index.html
@@ -267,13 +267,8 @@
 			<!-- Project Section Start -->
 			<section class="project" id="projetos">
 
-				<div class="project__title">
-					<h2 class="section__title">Projetos</h2>
-				</div>
-
-				<div class="project__container" data-project>
-
-				</div>
+				<h2 class="section__title">Projetos</h2>
+				<div class="project__container" data-project></div>
 
 			</section>
 			<!-- Project Section End-->
