criando card de forma dinamica

--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!-- CSS Start -->
 	<link rel="stylesheet" href="assets/css/normalize.css">
 	<link rel="stylesheet" href="assets/css/portfolio__style.css">
-	<!---- CSS End ---->
 
-	<!---- Javascript Start ---->
 	<script type="module" src="assets/js/main.js" defer></script>
-	<!---- Javascript End ---->
 
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
@@ -83,21 +79,21 @@
 
 								<div class="hobbies__card leitura">
 									<div class="hobbies__card__icon icon">
-										<img src="assets/img/icon/leitura.png" alt="" height="64">
+										<img src="assets/img/icon/hobbies/leitura.png" alt="" height="64">
 									</div>
 									<p class="hobbies__card__text">Ler é algo que me faz criativo, adoro ler bons manga.</p>
 								</div>
 
 								<div class="hobbies__card cozinha">
 									<div class="hobbies__card__icon icon">
-										<img src="assets/img/icon/cozinha.png" alt="" height="64">
+										<img src="assets/img/icon/hobbies/cozinha.png" alt="" height="64">
 									</div>
 									<p class="hobbies__card__text">Gosto de mistura ingredientes e ver algo surgindo.</p>
 								</div>
 
 								<div class="hobbies__card filme">
 									<div class="hobbies__card__icon icon">
-										<img src="assets/img/icon/filme.png" alt="" height="64">
+										<img src="assets/img/icon/hobbies/filme.png" alt="" height="64">
 									</div>
 									<p class="hobbies__card__text">Adoro assistir filmes e series. Principalmente de ficção cientifica.</p>
 								</div>
@@ -110,49 +106,14 @@
 
 
 					<!---- Skills Section Start ---->
-					<div class="skills__sessao">
+					<div class="c-skills__section">
+						
 						<h2 class="u-section__title">Skills</h2>
-						<div class="skills__carrossel">
-							<div class="skills">
 
-								<div class="skills__card python">
-									<div class="skills__card__icon icon">
-										<img src="assets/img/icon/python-svgrepo.svg" alt="" height="64">
-									</div>
-								</div>
-
-								<div class="skills__card javascript">
-									<div class="skills__card__icon icon">
-										<img src="assets/img/icon/javascript-svgrepo.svg" alt="" height="64">
-									</div>
-								</div>
-
-								<div class="skills__card html">
-									<div class="skills__card__icon icon">
-										<img src="assets/img/icon/html5-svgrepo.svg" alt="" height="64">
-									</div>
-								</div>
-
-								<div class="skills__card css">
-									<div class="skills__card__icon icon">
-										<img src="assets/img/icon/css3-svgrepo.svg" alt="" height="64">
-									</div>
-								</div>
-
-								<div class="skills__card flask">
-									<div class="skills__card__icon icon">
-										<img src="assets/img/icon/flask.svg" alt="" height="64">
-									</div>
-								</div>
-
-								<div class="skills__card mysql">
-									<div class="skills__card__icon icon">
-										<img src="assets/img/icon/mysql-icon.svg" alt="" height="64">
-									</div>
-								</div>
-
-							</div>
+						<div class="c-skills__carrossel" >
+							<div class="c-skills__container" data-skills></div>
 						</div>
+
 					</div>
 					<!---- Skills Section End ---->
 
