--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</label>
 
 				<ul>
-					<li><a href="assets/cv/curriculo.pdf" target="_blank">Download CV</a></li>
+					<li><a href="https://drive.google.com/file/d/1p7rflvDvYIxdgRCohd1PsSXTSssef6FC/view?usp=sharing" target="_blank">Download CV</a></li>
 					<li><a href="#education">Formação</a></li>
 					<li><a href="#project">Projetos</a></li>
 					<li><a href="#contact">Contatos</a></li>
@@ -55,11 +55,12 @@
 		<main>
 
 			<!---- About Section Start ---->
-			<section class="sobre" id="about">
+			<section class="about" id="about">
 
-				<div class="sobre__sessao">
-					<h1 id="ola">Olá</h1>
-					<p class="sobre__sessao__mim">
+				<div class="about__section">
+					<h1 id="hello">Olá</h1>
+
+					<p class="about__me">
 						Seja bem-vindo!
 						Sou <strong>Ygor Guilherme</strong>, entusiasta e estudante de desenvolvimento
 						web {front-end}. Amante da aréa de TI, sou fascinado em estudar eletronica e programação, procuro sempre entender um pouco de tudo e ampliar os meus conhecimentos, adoro um bom desafio.
@@ -67,38 +68,15 @@
 				</div>
 
 				<!-- Hobbies/Skills Section -->
-				<div class="hobbies__skills">
+				<div class="c-hobbies__skills">
 
 					<!-- Hobbies Section -->
-					<div class="hobbies__sessao">
+					<div class="c-hobbies__section">
 
 						<h2 class="u-section__title">Hobbies</h2>
 
-						<div class="hobbies__carrossel">
-							<div class="hobbies">
-
-								<div class="hobbies__card leitura">
-									<div class="hobbies__card__icon icon">
-										<img src="assets/img/icon/hobbies/leitura.png" alt="" height="64">
-									</div>
-									<p class="hobbies__card__text">Ler é algo que me faz criativo, adoro ler bons manga.</p>
-								</div>
-
-								<div class="hobbies__card cozinha">
-									<div class="hobbies__card__icon icon">
-										<img src="assets/img/icon/hobbies/cozinha.png" alt="" height="64">
-									</div>
-									<p class="hobbies__card__text">Gosto de mistura ingredientes e ver algo surgindo.</p>
-								</div>
-
-								<div class="hobbies__card filme">
-									<div class="hobbies__card__icon icon">
-										<img src="assets/img/icon/hobbies/filme.png" alt="" height="64">
-									</div>
-									<p class="hobbies__card__text">Adoro assistir filmes e series. Principalmente de ficção cientifica.</p>
-								</div>
-
-							</div>
+						<div class="c-hobbies__carrossel">
+							<div class="c-hobbies__container" data-hobbies> </div>
 						</div>
 
 					</div>
